# delta_analysis

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.MD  README.md  REPOSITORY_IMPROVEMENTS.md  SECURITY.md  vcpkg.json
benchmarks/: CMakeLists.txt  advance_benchmark.cpp  benchmark_adaptive_path.cpp  benchmark_advance.cpp  benchmark_operational_function.cpp  benchmark_riemann_sum.cpp  operational_function_benchmark.cpp  riemann_sum_benchmark.cpp
examples/: examples_fixtures.h
examples/arbitrary_regulative_ideas/: CMakeLists.txt  dirichlet_on_strings.cpp  src.cpp
include/delta/analysis/: logical_consistency_analyzer.h  math_philosophy_analyzer.h  paper_validity_analyzer.h  study_math_analyzer.h
include/delta/calculus/: continuity.h  differentiability.h  modulus.h  riemann_sum.h
include/delta/core/: adaptive_delta_path.h  completion.h  delta_operator.h  delta_path.h  delta_strategy.h  grid.h  grid_concept.h  grid_refine.h  interval_info.h  list_grid.h  operational_function.h  rational.h  regulative_idea.h  tree_grid.h  uniform_grid.h  value_metric.h
src/: CMakeLists.txt  src.cpp
tests/: test_fixtures.h
tests/basic/: CMakeLists.txt  main_tests_basic.cpp  test_adaptive_operator.cpp  test_adaptive_path.cpp  test_adaptive_stress.cpp  test_delta_path.cpp  test_differentiability.cpp  test_fixtures.h  test_grid.cpp  test_grid_concepts.cpp  test_grid_edge_cases.cpp  test_integral.cpp  test_logical_consistency_analyzer.cpp  test_math_philosophy_analyzer.cpp  test_non_commutativity.cpp  test_operational_function.cpp  test_operational_function_edge_cases.cpp  test_operators_edge_cases.cpp  test_paper_validity_analyzer.cpp  test_sqrt2.cpp  test_strategies_edge_cases.cpp  test_study_math_analyzer.cpp
tests/calculus/: CMakeLists.txt  main_tests_calculus.cpp  test_continuity.cpp  test_differentiability.cpp  test_modulus.cpp  test_modulus_continuity.cpp  test_rational_embedding.cpp  test_riemann_sum.cpp  test_sqrt2_construction.cpp
tests/numerical/: CMakeLists.txt  main_tests_numerical.cpp  test_tensor_field.cpp
tests/regulative_ideas/: CMakeLists.txt  test_matrix.cpp  test_padic.cpp  test_tree.cpp
